fixed z-index

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -166,7 +166,7 @@ body {
 	width: 100%;
 	display: block;
 	border-bottom: 1px solid #DEDFE6;
-	z-index: 100;
+	z-index: 999;
 	.logo {
 		float: left;
 		width: 65px;
